# screendrawer

./: .gitignore  .pylintrc  LICENSE.TXT  README.md  TODO.md  make.py  pyproject.toml  requirements.txt  sd.py  sd_devel.py
icons/: color_picker_2.b64  cursors.sdrw  pipette.b64  rakugaki.b64
icons/.ivthumbs/: circle.png_th  draw.png_th  eraser.png_th  move.png_th  rectangles.png_th  shape.png_th
scripts/: make.py  old2new.py  pickle2yaml.py  png2base64.py
sd/: __main__.py  brush.py  canvas.py  clipboard.py  commands.py  cursor.py  dialogs.py  dm.py  drawable.py  em.py  events.py  gom.py  grid.py  icons.py  import_export.py  menus.py  page.py  pen.py  utils.py  wiglets.py
src/sd/: __main__.py  brush.py  brushutils.py  bus.py  canvas.py  clipboard.py  commands.py  commands_obj.py  commands_props.py  cursor.py  dialogs.py  dm.py  drawable.py  drawable_factory.py  drawable_group.py  drawable_paths.py  drawable_primitives.py  drawer.py  em.py  events.py  gom.py  grid.py  history.py  icons.py  imageobj.py  import_export.py  menus.py  page.py  pen.py  state.py  texteditor.py  trafo.py  uibuilder.py  utils.py  wiglets.py  wiglets_ui.py
tests/: brush_test.py  bus.py  canvas_test.py  clipboard.py  cmdline_test.py  commands.py  commands_test.py  cursor.py  history_test.py  import_export_test.py  state_test.py  texteditor_test.py  utils_test.py  wiglets_test.py
tests/data/: foobar.sdrw
